# oh-my-feishu

./: .env.example  .eslintrc.cjs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GATEWAY_FEATURES.md  LICENSE  README.md  ecosystem.config.cjs  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vercel.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  publish.yml  showcase-pages.yml
.omc/: project-memory.json
.omc/autopilot/: spec.md
.omc/plans/: autopilot-impl.md  feishu-agent-integration-plan.md
.omc/sessions/: 9bb7d681-826f-40e9-b895-2fccd4e53988.json
.omc/state/: agent-replay-d08d9e19-b4f7-4258-bbe8-f1332fc85c74.jsonl  last-tool-error.json
_astro/: Layout.C3YY_4iX.css
agent/: core.py
agent/prompts/: system_prompt.md
agent/tools/: git_commit.py  read_code.py  read_log.py  run_test.py  send_feishu_card.py
ai/: index.html
assets/: env.example.tmpl
assets/claude/: settings.json.tmpl
assets/hooks/: built_in.py  manager.py
cli/: actions.py  app.py  status.py
cli/screens/: claude_setup.py  dashboard.py  ecc_setup.py  feishu_setup.py  (+1 more)
code/: index.html
demo/: index.html
docs/: QR_ONBOARDING.md  weekly-summary-0426-0428.md  weekly-summary-0505-0507.md  weekly-summary.md  卡片设计规范.md
gateway/: bot.py  index.html  trigger.py  webhook_server.py
repair/: flow.py  github_client.py  safety.py
scripts/: check-private-docs.mjs  install.py
showcase/: astro.config.mjs  index.md  package-lock.json  package.json  tsconfig.json
skill/: index.html
src/: index.ts  start.ts
value/: index.html
(+213 files in other folders)
