[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feishu-agent"
version = "0.1.0"
description = "Autonomous service repair agent with Feishu integration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.40.0",
    "lark-oapi>=1.4.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "flask>=3.0.0",
]

[project.scripts]
feishu-agent = "scripts.install:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.21.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
